Update README with usage

--- a/README.Rmd
+++ b/README.Rmd
@@ -3,8 +3,7 @@ output: github_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-[![Travis build status](https://travis-ci.org/mikmart/pinr.svg?branch=master)](https://travis-ci.org/mikmart/pinr)
-[![Coverage status](https://codecov.io/gh/mikmart/pinr/branch/master/graph/badge.svg)](https://codecov.io/github/mikmart/pinr?branch=master)
+
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
@@ -15,6 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 # pinr
+[![Travis build status](https://travis-ci.org/mikmart/pinr.svg?branch=master)](https://travis-ci.org/mikmart/pinr)
+[![Coverage status](https://codecov.io/gh/mikmart/pinr/branch/master/graph/badge.svg)](https://codecov.io/github/mikmart/pinr?branch=master)
 
 The goal of **pinr** is to simplify working with data containing Finnish
 personal identity codes (PINs). You can:
@@ -31,3 +32,33 @@ Currently you can install the development version from [GitHub](https://github.c
 # install.packages("devtools")
 devtools::install_github("mikmart/pinr")
 ```
+
+## Usage
+
+The primary (pipe-friendly) utility function automates pseudonymizing columns containing PINs in your data:
+
+```{r}
+library(pinr)
+
+df <- data.frame(pin = c("311280-888Y", "311280-888Y", "131052-308T"))
+key <- data.frame(pin = c("311280-888Y", "131052-308T"), pid = c(1, 2))
+
+pseudonymize(df, key, pid = pin, remove = FALSE)
+```
+
+Rather than manually specifying columns containing PINs, you can also use a heuristic implemented in the `is_probably_pin()` function to `guess` which columns need to be pseudonymized:
+
+```{r}
+pseudonymize(df, key, guess = TRUE)
+```
+
+Further, **pinr** includes helper functions for extracting data contained in the Finnish PINs such as the date of birth and sex of the person:
+
+```{r}
+pins <- c("311280-888Y", "131052-308T")
+
+pin_dob(pins)
+pin_sex(pins)
+```
+
+
