Changed the name of remove to replace in pseudonymize()

--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ key$pid[match(df$pin, key$pin)]
 Rather than manually specifying columns containing PINs, you can also use a heuristic implemented in the `is_probably_pin()` function to `guess` which columns need to be pseudonymized:
 
 ```{r}
-pseudonymize(df, key, guess = TRUE, remove = FALSE)
+pseudonymize(df, key, guess = TRUE, replace = FALSE)
 ```
 
 **pinr** also includes helpers for extracting data contained in the Finnish PINs, such as the date of birth and sex:
